--- a/public/partials/footer.html
+++ b/public/partials/footer.html
@@ -6,7 +6,7 @@
         <ul class="footer-lista">
           <li>
             <i class="icono-footer fas fa-envelope"></i>
-            artesanas@coloreschiapas.com
+            coloreschiapas@gmail.com
           </li>
           <li>
             <i class="icono-footer fas fa-phone"></i>
