--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -11,6 +11,12 @@
       </ul>
     </nav>
     <div class="iconos">
+      <div class="usuario-icono" id="usuario-icono">
+        <a href="/sesion.html" id="icono-usuario-link">
+          <img src="/assets/icons/user.png" alt="Usuario" style="width: 24px; height: 24px;">
+        </a>
+      </div>
+      
       <div class="busqueda-container" id="busqueda-container">
         <button class="btn-icono" id="btn-busqueda">
           <img src="assets/icons/lupa.png" alt="Buscar" class="icono-local">
@@ -18,7 +24,6 @@
         <input type="text" id="input-busqueda" placeholder="¿Qué estás buscando?" autocomplete="off">
         <ul id="resultados-busqueda" class="resultados-sugerencias"></ul>
       </div>
-      
       <button class="btn-icono" id="btn-carrito">
         <img src="assets/icons/carrito.png" alt="Carrito" class="icono-local">
         <span class="contador-carrito">0</span>
