--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,6 +1,7 @@
 <header class="header">
     <div class="logo-container">
       <img src="assets/img/logo.png" alt="Logo" class="logo">
+      <span class="nombre-sitio"><a>Colores de Chiapas</a></span>
     </div>
     <nav class="nav">
       <ul>
@@ -24,9 +25,12 @@
         <input type="text" id="input-busqueda" placeholder="¿Qué estás buscando?" autocomplete="off">
         <ul id="resultados-busqueda" class="resultados-sugerencias"></ul>
       </div>
-      <button class="btn-icono" id="btn-carrito">
+
+    <li id="carrito-icono" class="icono-carrito">
+      <a href="/carrito.html" class="enlace-carrito">
         <img src="assets/icons/carrito.png" alt="Carrito" class="icono-local">
-        <span class="contador-carrito">0</span>
-      </button>
-    </div>
+        <span id="carrito-contador" class="contador-carrito">0</span>
+      </a>
+    </li>
+  </div>
   </header>
