--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -26,11 +26,11 @@
         <ul id="resultados-busqueda" class="resultados-sugerencias"></ul>
       </div>
 
-    <li id="carrito-icono" class="icono-carrito">
-      <a href="/carrito.html" class="enlace-carrito">
-        <img src="assets/icons/carrito.png" alt="Carrito" class="icono-local">
-        <span id="carrito-contador" class="contador-carrito">0</span>
-      </a>
-    </li>
+      <li id="carrito-icono" class="icono-carrito" style="position: relative;">
+        <a href="/carrito.html" class="enlace-carrito">
+          <img src="assets/icons/carrito.png" alt="Carrito" class="icono-local">
+          <span id="carrito-contador" class="contador-carrito">0</span>
+        </a>
+      </li>
   </div>
   </header>
