--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+  <link rel="stylesheet" href="/css/swA.css">
     <div class="logo-container">
       <img src="assets/img/logo.png" alt="Logo" class="logo">
       <span class="nombre-sitio"><a>Colores de Chiapas</a></span>
